@@ -89,10 +89,9 @@ if [ ${partitiontable} = "GUID_partition_scheme" ]; then
 	echo "Confirm this is a GPT partitioned disk."
 
 	# Double check we can see the selected partition and it's of the right type.
-	# Now also check for another existing Chameleon installation on the same disk.
 	# If the following script finds anything, it returns 1 to indicate failure.
 
-    "$scriptDir"CheckProceed.sh "${targetDisk}" "${targetDeviceRaw}" "${targetVolume}" "${targetDeviceChosenByUser}" "${targetVolumeChosenByUser}" "${scriptDir}"
+	"$scriptDir"CheckProceed.sh "${targetVolume}" "${targetDeviceChosenByUser}" "${targetVolumeChosenByUser}" "${scriptDir}"
 	returnValue=$?
 	if [ ${returnValue} = 0 ]; then
 		# OK to proceed
@@ -158,21 +157,29 @@ if [ ${partitiontable} = "GUID_partition_scheme" ]; then
 					"$scriptDir"InstallLog.sh "${targetVolumeChosenByUser}" "Stage 0 loader not written to ${targetDisk}."
 				fi
 
-				# Write the stage 1 loader to the partition boot sector
-				"$scriptDir"WriteChameleonStage1.sh "${espformat}" "${stage1LoaderHFS}" "${stage1LoaderFAT}" "${targetVolumeChosenByUser}" "${targetDeviceRaw}" "${targetVolumeChosenByUser}" "${scriptDir}"
+				# Now also check for another existing Chameleon installation on the same disk.
+				# If the following script finds anything, it returns 1 to indicate failure.
+				"$scriptDir"CheckPreviousChameleon.sh "${targetDisk}" "${targetDeviceRaw}" "${targetDeviceChosenByUser}" "${targetVolumeChosenByUser}" "${scriptDir}"
+				returnValue=$?
+				if [ ${returnValue} = 0 ]; then
+					# OK to proceed
 
-				# Write the stage 2 loader to the root of the selected partition
-				"$scriptDir"WriteChameleonStage2.sh "${espformat}" "${stage2Loader}" "${targetVolume}" "${targetDevice}" "${targetVolumeChosenByUser}" "${scriptDir}"
+					# Write the stage 1 loader to the partition boot sector
+					"$scriptDir"WriteChameleonStage1.sh "${espformat}" "${stage1LoaderHFS}" "${stage1LoaderFAT}" "${targetVolumeChosenByUser}" "${targetDeviceRaw}" "${targetVolumeChosenByUser}" "${scriptDir}"
 
-				# Append a LineBreak to the installer log
-				"$scriptDir"InstallLog.sh "${targetVolumeChosenByUser}" "LineBreak"
+					# Write the stage 2 loader to the root of the selected partition
+					"$scriptDir"WriteChameleonStage2.sh "${espformat}" "${stage2Loader}" "${targetVolume}" "${targetDevice}" "${targetVolumeChosenByUser}" "${scriptDir}"
 
-				# Set the active partition ONLY if Windows is not installed
-				"$scriptDir"SetActivePartition.sh "${espformat}" "${diskSigCheck}" "${targetDiskRaw}" "${targetSlice}" "${targetVolumeChosenByUser}" "${scriptDir}"
+					# Append a LineBreak to the installer log
+					"$scriptDir"InstallLog.sh "${targetVolumeChosenByUser}" "LineBreak"
+
+					# Set the active partition ONLY if Windows is not installed
+					"$scriptDir"SetActivePartition.sh "${espformat}" "${diskSigCheck}" "${targetDiskRaw}" "${targetSlice}" "${targetVolumeChosenByUser}" "${scriptDir}"
+				else
+        			echo "Stop" >"${targetVolumeChosenByUser}"/.ChameleonExists 
+				fi
 			fi
 		fi
-    else
-        echo "Stop" >"${targetVolumeChosenByUser}"/.ChameleonExists 
 	fi
 else
 	#echo "ERROR Volume is not on a GPT partitioned disc."
