@@ -7,22 +7,16 @@ echo "***********************************************"
 # Checks the selected volume is present and the disk is partitioned
 # Now also check for another existing Chameleon installation on the same disk.
 
-# Receives targetDisk: for example, /dev/disk3.
-# Receives targetDeviceRaw: for example, /dev/rdisk3s1.
 # Receives targetVolume: Volume to install to (will be '/Volumes/EFI' if EFI install)
 # Receives targetDevice: Stores device number, for example /dev/disk2s1.
 # Receives installerVolume: Volume to write the installer log to.
 # Receives scriptDir: The location of the main script dir.
 
-if [ "$#" -eq 6 ]; then
-	targetDisk="$1"
-	targetDeviceRaw="$2"
-	targetVolume="$3"
-	targetDevice="$4"
-	installerVolume="$5"
-	scriptDir="$6"
-	echo "DEBUG: passed argument for targetDisk = $targetDisk"
-	echo "DEBUG: passed argument for targetDeviceRaw = $targetDeviceRaw"
+if [ "$#" -eq 4 ]; then
+	targetVolume="$1"
+	targetDevice="$2"
+	installerVolume="$3"
+	scriptDir="$4"
 	echo "DEBUG: passed argument for targetVolume = $targetVolume"
 	echo "DEBUG: passed argument for targetDevice = $targetDevice"
 	echo "DEBUG: passed argument for installerVolume = $installerVolume"
@@ -67,68 +61,5 @@ if [ "$targetVolume" = "/Volumes/EFI" ]; then
 		exit 1
 	fi
 fi
-
-
-# Check for existing Chameleon installations on a different
-# partition of the same target disk.
-#echo "DEBUG: Checking for existing Chameleon installations on ${targetDisk#/dev/}..."
-
-sliceNumber=$( echo ${targetDeviceRaw#*disk*s} )
-# strip slice from end
-targetDiskRawNoSlice=$( echo ${targetDeviceRaw%$sliceNumber} )
-
-# Are there any other partitions on the disk?
-# How many actual partitions are there?
-numSlices=$(( $( diskutil list | grep $( echo ${targetDisk#/dev/} ) | sed -n '$=' ) -2 ))
-
-# Only check the disk for Chameleon installations if there is more than one partition.
-if [ $numSlices -gt 1 ]; then 
-		
-	#Scan all partitions for Chameleon code
-	for (( i=1; i <= $numSlices; i++ ));
-	do
-		stageExistence=0
-		targetDiskRaw=$targetDiskRawNoSlice$i
-
-		# Check for existing stage 0 boot file from CheckDiskMicrocode.sh script
-		stage0type=$( dd 2>/dev/null if="$targetDisk" count=3 bs=1 skip=105 | xxd | awk '{print $2$3}' )
-		if [ "${stage0type}" == "0b807c" ] || [ "${stage0type}" == "0a803c" ] || [ "${stage0type}" == "ee7505" ] || [ "${stage0type}" == "742b80" ]; then
-			#echo "DEBUG: boot0 found on $targetDisk"
-			(( stageExistence++ ))
-		fi
-			
-		# Check for boot1h and boot1f32
-		boot1hSearch=$( dd 2>/dev/null if="$targetDiskRaw" count=1 | perl -ne '@a=split"";for(@a){printf"%02x",ord}' )
-		if [ "${boot1hSearch:0:16}" == "fa31c08ed0bcf0ff" ]; then
-			#echo "DEBUG: boot1h found on "$targetDiskRaw
-			(( stageExistence++ ))
-		elif [ "${boot1hSearch:0:4}" == "e962" ] && [ "${boot1hSearch:180:12}" == "424f4f542020" ]; then
-			#echo "DEBUG: boot1f32 found on "$targetDiskRaw
-			(( stageExistence++ ))
-		fi
-		
-		# Check for existing stage 2 boot file also
-		if [ -e "$( df | grep $targetDisk"s"$i | awk '{ print $6 }' )"/boot ]; then
-			#echo "DEBUG: boot found on $targetDiskRaw"
-			(( stageExistence++ ))
-		fi
-		
-		if [ $stageExistence == 3 ] && [ $i -ne $sliceNumber ]; then
-			#echo "DEBUG: STOP: There is already an existing Chameleon installation on $targetDiskRaw"
-			"$scriptDir"InstallLog.sh "${installerVolume}" "STOP: There is already an existing Chameleon installation on $targetDiskRaw."
-			"$scriptDir"InstallLog.sh "${installerVolume}" "NOTE: This is allowed and does work as long as you aren't dual booting Windows"
-			"$scriptDir"InstallLog.sh "${installerVolume}" "NOTE: from the same disk and are happy to control which partition is used by"
-			"$scriptDir"InstallLog.sh "${installerVolume}" "NOTE: flagging the required partition active. General use doesn't require two"
-			"$scriptDir"InstallLog.sh "${installerVolume}" "NOTE: Chameleon installs on the same disk, though might be done by advanced users."
-			"$scriptDir"InstallLog.sh "${installerVolume}" "NOTE: If you still want to do this then proceed by installing Chameleon manually."
-			exit 1
-		fi
-	done
-
-#else
-	#echo "DEBUG: Just one slice"
-fi
-
-#"$scriptDir"InstallLog.sh "${installerVolume}" "CheckProceed: PASS"
 
 exit 0
